--- a/src/main/resources/versicherung/Views/Dashboard.fxml
+++ b/src/main/resources/versicherung/Views/Dashboard.fxml
@@ -221,7 +221,7 @@
             </HBox>
             <StackPane fx:id="sceneStackPane" VBox.vgrow="ALWAYS">
                <children>
-                  <VBox fx:id="sceneKunden" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="container" stylesheets="@../css/styles.css" VBox.vgrow="ALWAYS">
+                  <VBox fx:id="sceneKunden" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="container" stylesheets="@../css/styles.css" visible="false" VBox.vgrow="ALWAYS">
                      <VBox.margin>
                         <Insets bottom="10.0" left="15.0" right="10.0" />
                      </VBox.margin>
@@ -398,11 +398,11 @@
                         </Label>
                      </children>
                   </VBox>
-                  <VBox fx:id="sceneVersicherung" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="container" stylesheets="@../css/styles.css" visible="false">
+                  <VBox fx:id="sceneVersicherung" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="container" stylesheets="@../css/styles.css">
                      <children>
-                        <StackPane fx:id="sceneKunden_stackpane1" prefHeight="150.0" prefWidth="200.0">
+                        <StackPane fx:id="sceneVersicherung_stackpane" prefHeight="150.0" prefWidth="200.0">
                            <children>
-                              <HBox fx:id="sceneVersicherung_buttons" alignment="CENTER" prefHeight="100.0" prefWidth="220.0" spacing="20.0" visible="false">
+                              <HBox fx:id="sceneVersicherung_buttons" alignment="CENTER" prefHeight="100.0" prefWidth="220.0" spacing="20.0">
                                  <children>
                                     <Button fx:id="sceneVersicherung_button_vertraege_auflisten" mnemonicParsing="false" onAction="#handleSceneVersicherungButtonClicks" prefHeight="100.0" prefWidth="100.0" text="Alle Vertraege auflisten" textAlignment="CENTER" wrapText="true" />
                                     <Button fx:id="sceneVersicherung_button_vertraege_erstellen" mnemonicParsing="false" onAction="#handleSceneVersicherungButtonClicks" prefHeight="100.0" prefWidth="100.0" text="Neue Vertraege erstellen" textAlignment="CENTER" wrapText="true" />
@@ -568,7 +568,7 @@
                                                 <Font size="15.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="field_id211" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" promptText="Kundenname...." styleClass="textfield" stylesheets="@../css/styles.css">
+                                          <TextField fx:id="field_id211" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" promptText="Typ..." styleClass="textfield" stylesheets="@../css/styles.css">
                                              <HBox.margin>
                                                 <Insets bottom="4.0" />
                                              </HBox.margin>
@@ -580,12 +580,8 @@
                                     </HBox>
                                     <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                                        <columns>
-                                          <TableColumn prefWidth="46.0" text="Nr." />
-                                          <TableColumn prefWidth="118.0" text="Vorname" />
-                                          <TableColumn prefWidth="122.0" text="Nachname" />
-                                          <TableColumn prefWidth="127.0" text="Geburstdatum" />
-                                          <TableColumn prefWidth="144.0" text="Telefonnummer" />
-                                          <TableColumn prefWidth="95.0" text="Adresse" />
+                                          <TableColumn prefWidth="146.0" text="Number" />
+                                          <TableColumn prefWidth="506.0" text="Versicherungstyp" />
                                        </columns>
                                        <VBox.margin>
                                           <Insets left="6.0" right="6.0" top="6.0" />
@@ -593,8 +589,9 @@
                                     </TableView>
                                     <HBox alignment="CENTER" prefHeight="62.0" prefWidth="665.0" spacing="10.0">
                                        <children>
-                                          <Button mnemonicParsing="false" onAction="#handleBackToKundenClick" prefHeight="31.0" prefWidth="78.0" text="Back" />
-                                          <Button disable="true" mnemonicParsing="false" prefHeight="31.0" prefWidth="78.0" text="Löschen" />
+                                          <Button mnemonicParsing="false" onAction="#handleBackToVersicherungClick" prefHeight="31.0" prefWidth="78.0" text="Back" />
+                                          <Button fx:id="sceneVersicherung_VersicherungsTypen_button_delete" disable="true" mnemonicParsing="false" onAction="#handleLoeschenVersicherungsTypClick" prefHeight="31.0" prefWidth="78.0" text="Löschen" />
+                                          <Button fx:id="sceneVersicherung_VersicherungsTypen_button_neue_erstellen" mnemonicParsing="false" onAction="#handleErstellenVersicherungsTypClick" prefHeight="25.0" prefWidth="134.0" text="Neuen Typ erstellen" />
                                        </children>
                                     </HBox>
                                  </children>
