--- a/src/main/resources/versicherung/Views/Dashboard.fxml
+++ b/src/main/resources/versicherung/Views/Dashboard.fxml
@@ -559,7 +559,7 @@
                                     </HBox>
                                  </children>
                               </VBox>
-                              <VBox fx:id="sceneVersicherung_VersicherungsTypen" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" visible="false">
+                              <VBox fx:id="sceneVersicherung_VersicherungsTypen" alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                                  <children>
                                     <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
                                        <children>
@@ -578,10 +578,10 @@
                                           <Insets left="20.0" />
                                        </VBox.margin>
                                     </HBox>
-                                    <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                    <TableView fx:id="sceneVersicherung_VersicherungsTypen_table" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                                        <columns>
-                                          <TableColumn prefWidth="146.0" text="Number" />
-                                          <TableColumn prefWidth="506.0" text="Versicherungstyp" />
+                                          <TableColumn fx:id="sceneVersicherung_VersicherungsTypen_table_column_id" prefWidth="146.0" style="-fx-alignment: CENTER;" text="Number" />
+                                          <TableColumn fx:id="sceneVersicherung_VersicherungsTypen_table_column_typname" prefWidth="506.0" style="-fx-alignment: CENTER;" text="Versicherungstyp" />
                                        </columns>
                                        <VBox.margin>
                                           <Insets left="6.0" right="6.0" top="6.0" />
